maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:50: error: not found: value geY
  var y:Int = geY()
              ^